Fix style / alignment issues

--- a/src/css/pages/SurahIndex.scss
+++ b/src/css/pages/SurahIndex.scss
@@ -51,15 +51,7 @@ body .root .content.theme.ar {
 
   ul.body.index {
     li.surah {
-      a {
-        span.id {
-          font-size: x-large;
-        }
-        span.name {
-          font-size: x-large;
-        }
-        span.transliterated { display: none; }
-      }
+      span.transliterated { display: none; }
     }
   }
   footer {
